# PoetryAnimalFactsDb

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.kind.yaml  compose.yaml  docker-compose.yaml  poetryanimalfactsdb.py  pyproject.toml  req.py  sample.envrc
kubernetes/: deployment.yaml
migrations/versions/: 71e1be647ba0_.py
templates/: index.html
