[tool.poetry]
name = "poetryanimalfactsdb"
version = "0.1.0"
description = ""
authors = ["Lisa Stats <lisa.stathopulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
requests = "^2.31.0"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
